--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
     <string name="app_name">CaloriTrack</string>
+    <string name="home">Home</string>
+    <string name="feed">Feed</string>
+    <string name="scan">Scan</string>
+    <string name="history">History</string>
+    <string name="profile">Profile</string>
+    <string name="news">News</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="register">register</string>
+    <string name="password">Password</string>
+    <string name="email">Email</string>
+    <string name="name">Name</string>
+    <string name="register_here">Register here</string>
+    <string name="login">Login</string>
+    <string name="register_here_button">Don\'t have an account? Register here</string>
 </resources>
